--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "date-fns": "^2.19.0",
     "modern-normalize": "^1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
