Add script to deploy to gh-pages

--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "reddit-clone-angular",
   "version": "0.0.0",
+  "author": "Marko Grešak <marko@gresak.io> (https://gresak.io)",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "predeploy": "npm run build -- --prod --base-href /reddit-clone-angular/",
+    "deploy": "gh-pages -d dist/reddit-clone-angular"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +38,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "gh-pages": "^3.1.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
